--- a/dev/characters/personnage.html
+++ b/dev/characters/personnage.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../css/styles.css">
 		<title>Document</title>
 	</head>
 	<body>
 		<header>
-			<iframe src="../ressources/header.html" frameborder="0"></iframe>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
 		</header>
 		<main>
 			<div class="container">
@@ -25,6 +26,7 @@
                     </div>
 				</div>
                 <div class="relations">
+					<hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
                     <p></p>
@@ -32,7 +34,7 @@
 			</div>
 		</main>
 		<footer>
-			<iframe src="../ressources/footer.html" frameborder="0"></iframe>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
 		</footer>
 	</body>
 </html>
