new template used

--- a/dev/personnage.html
+++ b/dev/personnage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title></title>
 	</head>
 	<body>
 		<header>
@@ -20,14 +20,16 @@
                     <div class="presentoir">
                         <img src="" alt="">
                         <table>
-
-                        </table>
+							
+						</table>
                     </div>
 				</div>
                 <div class="relations">
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-                    <p></p>
+					<p></p>  
+					<p></p>   
+					<p></p> 
                 </div>
 			</div>
 		</main>
