--- a/html/accueil.html
+++ b/html/accueil.html
@@ -22,6 +22,8 @@
             <a href="" class="lien"><img class="film" src="../images/movies/poster3.jpg"/>Film 3: La Revanche des Siths</a>
         </div>
     </main>
-    <footer src="../css/footer.css"></footer>
+    <footer>
+        <iframe src="../css/footer.css"></iframe>
+    </footer>
 </body>
 </html>
