--- a/html/accueil.html
+++ b/html/accueil.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <iframe src="../css/header.css"></iframe>
+        <iframe src="../views/header.html" frameborder="0"></iframe>
     </header>
     <main class="accueil">
         <div class="left">
@@ -22,6 +22,8 @@
             <a href="" class="lien"><img class="film" src="../images/movies/poster3.jpg"/>Film 3: La Revanche des Siths</a>
         </div>
     </main>
-    <footer src="../css/footer.css"></footer>
+    <footer>
+        <iframe src="../views/footer.html" frameborder="0"></iframe>
+    </footer>
 </body>
 </html>
